--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.3",
     "react-icons": "^4.10.1",
+    "react-query": "^3.39.3",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   },
