--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "intersection-observer": "^0.12.2",
     "lucide-react": "^0.263.1",
     "next": "13.4.12",
     "next-auth": "^4.22.5",
